src/components/super-admin/OrganizationForm.module.css
.formContainer {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 10px;

}

.formContainer label {
  font-weight: bold;
}


.inputstyle{
  /* width: 95%; */
  border-radius: 40px;
  border: 1px solid var(--Brand-700, #4338CA);
  background-color:transparent;
  margin-bottom: 1em;
  height: 2.1rem;
  padding: 0.375rem 0.75rem;
}

.selectContainer .ant-select-selection-item {
  color: black !important;
}

.selectContainer{
  width:100%;
  height: 46px;
  border-radius: 40px;
  border: 1px solid var(--Brand-700, #4338CA);
  background-color:transparent;
  margin-bottom: 1em;
  padding: 6px;
  color: black;
}


.buttonStyle{
  display: flex;
  width: 130px;
  height: 50px;
  padding: 10px 16px;
  justify-content:center;
  align-items:center;
  gap: 8px;
  flex-shrink: 0;
  border-radius:30px;
  background-color: var(--Brand-500, #6366F1);
  color: #FFFFFF;
  font-family: Into Lato;
  font-size : 16px;
  font-style: normal;
  font-weight: 700;
  line-height: 24px;
}
.error{
  color: red;
}

.pincodeStyle{
  /* width:95%; */
  border-radius: 40px;
  border: 1px solid var(--Brand-700, #4338CA);
  background-color:transparent;
  margin-bottom: 1em;
  padding: 0.375rem 0.75rem;
  height: 2.1rem;
}


@media (max-width: 600px) {
  .inputstyle{
    width: 88.5%
  }

  .pincodeStyle{
    width:88.5%
  }
}


@media (min-width: 601px) and (max-width: 750px){
  .inputstyle{
    width: 95%;
    background-color: red;
  }

  .pincodeStyle{
    width:95%
  }
}


@media (min-width: 751px) and (max-width: 800px){
  .inputstyle{
    width: 95.5%;
  }

  .pincodeStyle{
    width:95.5%
  }
}

@media (min-width: 801px) and (max-width: 900px){
  .inputstyle{
    width: 100%;
  }

  .pincodeStyle{
    width:100%
  }
}

@media (min-width: 901px) and (max-width: 1022px){
  .inputstyle{
    width: 90%
  }

  .pincodeStyle{
    width:90%
  }

  .selectContainer{
    width: 96%
  }
}

@media (min-width: 1023px) and (max-width: 1200px){
  .inputstyle{
    width: 90%
  }

  .pincodeStyle{
    width:90%
  }

  .selectContainer{
    width: 96%
  }
}

@media (min-width: 1201px){
  .inputstyle{
    width: 90%
  }

  .pincodeStyle{
    width:90%
  }

  .selectContainer{
    width: 96%
  }
}












.labels{
  display: flex;
  font-size: 1rem;
  font-weight: bold;
}


@media (min-width: 900px) {
  .labels{
    width: auto;
  }
}

